@@ -447,6 +447,10 @@ global maygc object convert_time_to_universal (const FILETIME* time) {
                  real_time=,);
   return UL_to_I(real_time);
 }
+global void convert_time_from_universal (object universal, FILETIME* time) {
+  mulu32(I_to_UL(universal) +  109207 * 86400,ticks_per_second,
+         time->dwHighDateTime,time->dwLowDateTime);
+}
 #endif
 
 /* ------------------------------------------------------------------------
